lib/src/compiler/tests/testdata/errors/86.out
error[E010]: invalid pattern `$a`
 --> line:3:13
  |
3 |   $a = { 01 ~0 11 }
  |             ^^ uneven number of nibbles
  |